added video contents with links

--- a/javascript-beginner/index.html
+++ b/javascript-beginner/index.html
@@ -8,6 +8,45 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <div>
+        <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0" target="_blank">JavaScript Основы для Начинающих - Полный Курс за 6 часов [2020]</a>
+        <ul>
+            <h4>Содержание: </h4>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=0s" target="_blank"> 0:00:00​ - Введение</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=91s" target="_blank"> 0:01:31​ - Что такое JavaScript</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=1784s" target="_blank"> 0:29:44​ - Основы</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=6232s" target="_blank"> 1:43:52​ - Числа + BigInt</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=8484s" target="_blank"> 2:21:24​ - Строки</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=9681s" target="_blank"> 2:41:21​ - Функции</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=11019s" target="_blank"> 3:03:39​ - Массивы</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=13506s" target="_blank"> 3:45:06​ - Объекты</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=15650s" target="_blank"> 4:20:50​ - Асинхронность</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=16863s" target="_blank"> 4:41:03​ - Работа с DOM</a>
+            </li>
+            <li >
+               <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=20369s" target="_blank"> 5:39:29​ - Заключение</a>
+            </li>
+        </ul>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
