--- a/javascript-beginner/index.html
+++ b/javascript-beginner/index.html
@@ -11,7 +11,7 @@
     <div>
         <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0" target="_blank">JavaScript Основы для Начинающих - Полный Курс за 6 часов [2020]</a>
         <ul>
-            <h4>Содержание: </h4>
+            <h4>Video contents:</h4>
             <li >
                <a href="https://www.youtube.com/watch?v=Bluxbh9CaQ0&t=0s" target="_blank"> 0:00:00​ - Введение</a>
             </li>
